fixed z-index of bg

--- a/css/style.css
+++ b/css/style.css
@@ -744,6 +744,7 @@ h1 span::after {
     width: 100%;
     height: 1740px;
     overflow: hidden;
+    z-index: -1;
 }
 .bg {
     position: absolute;
